# archives

./: README.md
A_Simple_Genetic_Algorithm/: Evolution.c  README.md
Arch-i3_configfile/: README.md
Arch-i3_configfile/conky/: config  date
Arch-i3_configfile/i3/: config
Arch-i3_configfile/mpd/: log  mpd.conf  mpd.db  mpdstate
Arch-i3_configfile/polybar/: launch.sh  topbar.ini
Arch-i3_configfile/rofi/: custom.rasi
Arch-i3_configfile/script/: reboot_with_ask.py  shutdown_with_ask.py
Artificial_Intelligence/: README.md
Artificial_Intelligence/Eight-Digit_Puzzle/: README.md  a_star.cc  bfs.cc  dfs.cc  ids.cc
Connect6/: ConnectSix.pro  README.md  ai.cpp  ai.h  bottombar.cpp  bottombar.h  gamemodel.cpp  gamemodel.h  gamewidget.cpp  gamewidget.h  mainwindow.cpp  resource.qrc
OS_Lab/Lab1-2/: .gitignore  Makefile
OS_Lab/Lab3/: Makefile
OS_Lab/Lab4/: main.cc
RaccoonReader/: CMakeLists.txt  README.md  Resource.qrc
RaccoonReader/doc/: main.puml  pdfview.puml
RaccoonReader/include/: mainwindow.h
RaccoonReader/include/pdfarea/pagecontroller/: pagecontroller.h  pageslider.h  pagespinbox.h  scalebox.h
RaccoonReader/include/pdfarea/pdfview/: highlightarea.h  marktable.h  pdfmarkstate.h  pdfstate.h  pdfview.h  pdfviewstate.h  pdfzoomstate.h
RaccoonReader/include/sidebar/: toc.h
RaccoonReader/src/: main.cpp  mainwindow.cpp
RaccoonReader/src/pdfarea/pagecontroller/: pagecontroller.cpp  pageslider.cpp  pagespinbox.cpp  scalebox.cpp
RaccoonReader/src/pdfarea/pdfview/: highlightarea.cpp  pdfmarkstate.cpp  pdfview.cpp  pdfviewstate.cpp  pdfzoomstate.cpp
RaccoonReader/src/sidebar/: toc.cpp
RunningDango/: README
STAMP-Demo/: README.md
STAMP-Demo/Doc/: RFC8762 Simple Tow-Way Active Measurement Protocol 部分译注.md  计算机网络作业——STAMP测试协议的介绍.md
STAMP-Demo/STAMP-Client/: STAMP-Client.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
STAMP-Demo/STAMP-Protocol/: STAMP-Protocol.pro  hmac.cc  packet.cc  sha256.cc  stamp.h  timestamp.cc
Timer/: README.md
VrchPE/: README.md
cis194/: README.md
lnu-eatting/: CNAME  index.html  roll.js  style.css
simple-snake/: source.c
studentManager/: README.md
(+90 files in other folders)
